--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,16 +19,17 @@
             android:id="@+id/headerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
+            android:layout_marginBottom="30dp"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@id/footerLayout">
 
-            <ImageView
-                    android:id="@+id/loginLogo"
-                    android:src="@mipmap/logo_foreground"
-                    android:layout_width="180dp"
-                    android:layout_height="180dp"/>
+        <ImageView
+                android:id="@+id/loginLogo"
+                android:src="@mipmap/logo_foreground"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                app:layout_constraintBottom_toTopOf="@id/footerLayout"/>
 
     </LinearLayout>
 
@@ -43,33 +44,32 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="40dp"> <!--最下面放按鈕-->
+            android:layout_marginBottom="25dp"> <!--最下面放按鈕-->
 
-            <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/loginCard"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="350dp"
-                    style="@style/mediumCardView">
+        <com.google.android.material.card.MaterialCardView
+                android:id="@+id/loginCard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="380dp"
+                style="@style/mediumCardView">
 
-                <GridView
-                        android:id="@+id/titleGridView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="80dp"
-                        android:numColumns="2"
-                        android:horizontalSpacing="10dp"/>
+            <GridView
+                    android:id="@+id/titleGridView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:horizontalSpacing="10dp"/>
 
-                <ProgressBar
-                        android:id="@+id/loading"
-                        android:visibility="gone"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-
-            </com.google.android.material.card.MaterialCardView>
+            <ProgressBar
+                    android:id="@+id/loading"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
 
-<!--
+        </com.google.android.material.card.MaterialCardView>
+
+
+        <!--
         <Button
                 android:id="@+id/login"
                 android:enabled="true"
@@ -111,10 +111,10 @@
             android:selectAllOnFocus="true"
             android:textColor="@color/colorLogin"
             android:textColorHint="@color/colorHint"
-            android:layout_marginTop="180dp"
+            android:layout_marginBottom="30dp"
             android:layout_marginStart="80dp"
             android:layout_marginEnd="40dp"
-            app:layout_constraintTop_toBottomOf="@id/headerLayout"
+            app:layout_constraintBottom_toTopOf="@id/password"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -129,26 +129,26 @@
             android:selectAllOnFocus="true"
             android:textColor="@color/colorLogin"
             android:textColorHint="@color/colorHint"
-            android:layout_marginTop="40dp"
+            android:layout_marginBottom="120dp"
             android:layout_marginStart="80dp"
             android:layout_marginEnd="40dp"
-            app:layout_constraintTop_toBottomOf="@id/username"
+            app:layout_constraintBottom_toTopOf="@id/loginButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.material.button.MaterialButton
             android:id="@+id/loginButton"
             android:enabled="true"
-            android:layout_width="100dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/action_sign_in"
-            android:layout_marginTop="85dp"
-            app:cornerRadius="18dp"
-            android:textSize="20sp"
+            android:layout_marginBottom="5dp"
+            app:cornerRadius="20dp"
+            android:textSize="16sp"
             android:padding="10dp"
             android:gravity="center"
             style="@style/loginButton"
-            app:layout_constraintTop_toBottomOf="@id/password"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
