sign viewpager+tablayout

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,19 +22,18 @@
             android:layout_marginBottom="30dp"
             android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@id/footerLayout">
+            app:layout_constraintBottom_toTopOf="@id/signView">
 
         <ImageView
-                android:id="@+id/loginLogo"
+                android:id="@+id/signLogo"
                 android:src="@mipmap/logo_foreground"
                 android:layout_width="180dp"
-                android:layout_height="180dp"
-                app:layout_constraintBottom_toTopOf="@id/footerLayout"/>
+                android:layout_height="180dp"/>
 
     </LinearLayout>
 
     <!--Footer Layout-->
-    <LinearLayout
+   <!-- <LinearLayout
             android:id="@+id/footerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="25dp"> <!--最下面放按鈕-->
+            android:layout_marginBottom="25dp">
 
         <com.google.android.material.card.MaterialCardView
                 android:id="@+id/loginCard"
@@ -57,7 +56,37 @@
                     android:id="@+id/titleGridView"
                     android:layout_width="wrap_content"
                     android:layout_height="80dp"
-                    android:horizontalSpacing="10dp"/>
+                    android:numColumns="2"
+                    android:horizontalSpacing="15dp"/>
+
+            <EditText
+                    android:id="@+id/loginUsername"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_email"
+                    android:inputType="textEmailAddress"
+                    android:imeOptions="actionNext"
+                    android:selectAllOnFocus="true"
+                    android:textColor="@color/colorLogin"
+                    android:textColorHint="@color/colorHint"
+                    android:layout_marginTop="110dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginEnd="25dp"/>
+
+            <EditText
+                    android:id="@+id/loginPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/prompt_password"
+                    android:imeActionLabel="@string/action_sign_in_short"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:selectAllOnFocus="true"
+                    android:textColor="@color/colorLogin"
+                    android:textColorHint="@color/colorHint"
+                    android:layout_marginTop="160dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginEnd="25dp"/>
 
             <ProgressBar
                     android:id="@+id/loading"
@@ -67,77 +96,52 @@
 
 
         </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>-->
 
 
-        <!--
-        <Button
-                android:id="@+id/login"
-                android:enabled="true"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:text="@string/action_sign_in"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="570dp"
-                app:layout_constraintHorizontal_bias="0.5"/>
+    <LinearLayout
+            android:id="@+id/signView"
+            android:layout_width="match_parent"
+            android:layout_height="380dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="25dp">
 
+            <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/signViewCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="380dp"
+                    style="@style/mediumCardView">
 
-        <ProgressBar
-                android:id="@+id/loading"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="64dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="64dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.3"/>
--->
+                    <com.google.android.material.tabs.TabLayout
+                            android:id="@+id/signTabs"
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            app:tabMinWidth="150dp"
+                            app:tabSelectedTextColor="@color/colorSign"
+                            app:tabTextColor="@color/colorSignNoSelect"
+                            app:tabGravity="fill"
+                            app:tabMode="fixed"
+                            app:tabTextAppearance="@style/tabLayoutTextAppearance"/>
+                        <!--    app:tabTextAppearance="@android:style/TextAppearance.Holo.Large"/> Large/Medium/Small-->
+
+                    <androidx.viewpager.widget.ViewPager
+                            android:id="@+id/signPager"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+            </com.google.android.material.card.MaterialCardView>
+
     </LinearLayout>
 
-    <EditText
-            android:id="@+id/username"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/prompt_email"
-            android:inputType="textEmailAddress"
-            android:imeOptions="actionNext"
-            android:selectAllOnFocus="true"
-            android:textColor="@color/colorLogin"
-            android:textColorHint="@color/colorHint"
-            android:layout_marginBottom="30dp"
-            android:layout_marginStart="80dp"
-            android:layout_marginEnd="40dp"
-            app:layout_constraintBottom_toTopOf="@id/password"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    <EditText
-            android:id="@+id/password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/prompt_password"
-            android:imeActionLabel="@string/action_sign_in_short"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:selectAllOnFocus="true"
-            android:textColor="@color/colorLogin"
-            android:textColorHint="@color/colorHint"
-            android:layout_marginBottom="120dp"
-            android:layout_marginStart="80dp"
-            android:layout_marginEnd="40dp"
-            app:layout_constraintBottom_toTopOf="@id/loginButton"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
     <com.google.android.material.button.MaterialButton
-            android:id="@+id/loginButton"
+            android:id="@+id/signInButton"
             android:enabled="true"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
@@ -151,6 +155,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
