--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimary">#FCDC8D</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#00BCD4</color>
-    <color name="colorLogin">#000000</color>
-    <color name="colorSignUp">#000000</color>
+    <color name="colorSign">#000000</color>
+    <color name="colorSignNoSelect">#757575</color>
     <color name="colorHint">#000000</color>  <!--#00BCD4-->
     <color name="mediumComponent">#FFFFFF</color>
     <color name="colorText">#FFFFFF</color>
