--- a/app/src/main/res/layout/title_signup.xml
+++ b/app/src/main/res/layout/title_signup.xml
@@ -1,6 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/titleSignUp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
-</LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/signUpEmailBlock"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+        <ImageView
+                android:id="@+id/signUpEmailLogo"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@mipmap/email"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/signUpEmail"
+                app:layout_constraintBottom_toBottomOf="@+id/signUpEmailBlock"
+                android:layout_marginStart="25dp"
+                android:layout_marginBottom="2dp"/>
+
+        <EditText
+                android:id="@+id/signUpEmail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_email"
+                android:inputType="textEmailAddress"
+                android:imeOptions="actionNext"
+                android:selectAllOnFocus="true"
+                android:textColor="@color/colorSign"
+                android:textColorHint="@color/colorHint"
+                app:layout_constraintStart_toEndOf="@id/signUpEmailLogo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/signUpEmailBlock"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="25dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/signUpUsernameBlock"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/signUpEmailBlock">
+
+
+        <ImageView
+                android:id="@+id/signUpUsernameLogo"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@mipmap/profile"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/signUpUsername"
+                app:layout_constraintBottom_toBottomOf="@+id/signUpUsernameBlock"
+                android:layout_marginStart="25dp"
+                android:layout_marginBottom="5dp"/>
+
+        <EditText
+                android:id="@+id/signUpUsername"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_username"
+                android:inputType="text"
+                android:imeOptions="actionNext"
+                android:selectAllOnFocus="true"
+                android:textColor="@color/colorSign"
+                android:textColorHint="@color/colorHint"
+                app:layout_constraintStart_toEndOf="@id/signUpUsernameLogo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/signUpUsernameBlock"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="25dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/signUpPasswordBlock"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/signUpUsernameBlock">
+
+        <ImageView
+                android:id="@+id/signUpPasswordLogo"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@mipmap/lock"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/signUpPassword"
+                app:layout_constraintBottom_toBottomOf="@+id/signUpPasswordBlock"
+                android:layout_marginStart="25dp"
+                android:layout_marginBottom="5dp"/>
+
+        <EditText
+                android:id="@+id/signUpPassword"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/prompt_password"
+                android:imeActionLabel="@string/action_sign_up_short"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:selectAllOnFocus="true"
+                android:textColor="@color/colorSign"
+                android:textColorHint="@color/colorHint"
+                app:layout_constraintStart_toEndOf="@id/signUpPasswordLogo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/signUpPasswordBlock"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="25dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/signUpButton"
+            android:enabled="true"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="@string/action_sign_up"
+            android:layout_marginBottom="5dp"
+            app:cornerRadius="20dp"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:gravity="center"
+            style="@style/loginButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
