[V1.0.0] upload image to storage and UI optimization

--- a/app/src/main/res/layout/content_display.xml
+++ b/app/src/main/res/layout/content_display.xml
@@ -5,7 +5,9 @@
         android:id="@+id/contentDisplay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Content">
+        android:fitsSystemWindows="true"
+        tools:context=".Content"
+        android:navigationBarColor="@color/colorPrimary">
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/contentToolBar"
@@ -16,6 +18,44 @@
                 app:layout_constraintTop_toTopOf="parent">
 
         </androidx.appcompat.widget.Toolbar>
+
+        <FrameLayout
+                android:id="@+id/contentView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:orientation="vertical"
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/contentToolBar"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+             <!--   <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/contentTabs"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:tabMinWidth="150dp"
+                        app:tabSelectedTextColor="@color/colorSign"
+                        app:tabTextColor="@color/colorSignNoSelect"
+                        app:tabGravity="fill"
+                        app:tabMode="fixed"
+                        app:tabBackground="@color/colorPrimary"
+                        app:tabTextAppearance="@style/contentTabLayoutAppearance"
+                        app:layout_constraintStart_toStartOf="@id/contentView"
+                        app:layout_constraintEnd_toEndOf="@id/contentView"
+                        app:layout_constraintTop_toTopOf="@id/contentView"/>-->
+                <!--    app:tabTextAppearance="@android:style/TextAppearance.Holo.Large"/> Large/Medium/Small-->
+                <!--tabGravity可改為center，tabMode改為scroll-->
+
+            <!--    <androidx.viewpager.widget.ViewPager
+                        android:id="@+id/contentPager"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="@id/contentView"
+                        app:layout_constraintEnd_toEndOf="@id/contentView"
+                        app:layout_constraintTop_toTopOf="@id/contentTabs"/>-->
+
+        </FrameLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
