--- a/app/src/main/res/layout/title_signin.xml
+++ b/app/src/main/res/layout/title_signin.xml
@@ -129,15 +129,29 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+   <!-- <com.dd.CircularProgressButton
+            android:id="@+id/btnWithText"
+            android:layout_width="196dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/colorText"
+            android:textSize="18sp"
+            app:cpb_textComplete="@string/action_sign_in"
+            app:cpb_textError="@string/action_sign_in"
+            app:cpb_textIdle="@string/action_sign_in"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="70dp"/>-->
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signInButton"
         android:enabled="true"
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/action_sign_in"
         android:layout_marginBottom="5dp"
-        app:cornerRadius="20dp"
+        app:cornerRadius="200dp"
         android:textSize="16sp"
         android:padding="10dp"
         android:gravity="center"
