--- a/app/src/main/res/layout/title_signup.xml
+++ b/app/src/main/res/layout/title_signup.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/titleSignUp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:focusable="true"
         android:focusableInTouchMode="true">
@@ -176,11 +177,11 @@
     <com.google.android.material.button.MaterialButton
             android:id="@+id/signUpButton"
             android:enabled="true"
-            android:layout_width="150dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="@string/action_sign_up"
             android:layout_marginBottom="5dp"
-            app:cornerRadius="20dp"
+            app:cornerRadius="200dp"
             android:textSize="16sp"
             android:padding="10dp"
             android:gravity="center"
