--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:windowTranslucentStatus">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -27,9 +28,20 @@
         <item name="android:textColor">@color/colorText</item>
     </style>
 
-    <style name="tabLayoutTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
+    <style name="tabLayoutAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
         <item name="android:textSize">25sp</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="contentTabLayoutAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="uploadButton" parent="Theme.AppCompat.Light">
+        <item name="rippleColor">@color/uploadButtonPress</item>
+        <item name="backgroundTint">@color/uploadButtonNormal</item>
+        <item name="android:textColor">@color/uploadButtonText</item>
     </style>
 
 </resources>
